--- a/douban.FM/douban.FM-Info.plist
+++ b/douban.FM/douban.FM-Info.plist
@@ -6,10 +6,8 @@
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pwrd.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>duan.qinglun.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
